added search box in hero section

--- a/src/sass/partials/_mixins.scss
+++ b/src/sass/partials/_mixins.scss
@@ -36,6 +36,11 @@
   }
 }
 
+// Overlay
+@mixin overlay($background) {
+  background: $background;
+}
+
 // Breakpoints
 @mixin media-query($breakpoint) {
   @if $breakpoint == tablet {
