--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -43,7 +43,7 @@ a {
 .main-container .header .logo-nav-wrapper .logo,
 .main-container .header .logo-nav-wrapper .hamburger {
   transition: all 0.4s;
-  z-index: 3;
+  z-index: 4;
 }
 .main-container .header .logo-nav-wrapper .logo.nav-active {
   color: #ccc;
@@ -62,6 +62,7 @@ a {
   background-color: #141525;
   transform: translateY(-110%);
   transition: all 0.5s ease-in-out;
+  z-index: 3;
 }
 .main-container .header .logo-nav-wrapper .nav.active {
   transform: translateX(0%);
@@ -81,6 +82,11 @@ a {
 .main-container .header .logo-nav-wrapper .nav-links {
   color: #969696;
   text-transform: uppercase;
+  opacity: 0;
+}
+.main-container .header .logo-nav-wrapper .nav-links.active {
+  -webkit-animation: navLinks 0.5s ease-in-out 0.5s forwards;
+          animation: navLinks 0.5s ease-in-out 0.5s forwards;
 }
 .main-container .main {
   width: 90%;
@@ -88,12 +94,86 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: row;
-  gap: 1rem;
-  height: 50vh;
+  flex-direction: column;
+  gap: 3rem;
+  height: 60vh;
 }
 .main-container .main .hero-text {
   text-align: center;
-  font-size: 2.3rem;
+  font-size: 2.35rem;
   font-weight: 700;
+  z-index: 2;
+}
+.main-container .main .search-input-group {
+  position: relative;
+  width: 90%;
+  height: 3rem;
+  z-index: 2;
+}
+.main-container .main .search-input {
+  width: 100%;
+  height: 100%;
+  font-size: 1rem;
+  padding: 0.4rem 1rem 0.4rem 2.3rem;
+  background-color: rgba(51, 56, 164, 0.2);
+  border-radius: 2rem;
+  border: none;
+}
+.main-container .main .search-input::-moz-placeholder {
+  font-style: italic;
+  color: #393939;
+  font-weight: 500;
+  font-size: 0.9rem;
+}
+.main-container .main .search-input:-ms-input-placeholder {
+  font-style: italic;
+  color: #393939;
+  font-weight: 500;
+  font-size: 0.9rem;
+}
+.main-container .main .search-input::placeholder {
+  font-style: italic;
+  color: #393939;
+  font-weight: 500;
+  font-size: 0.9rem;
+}
+.main-container .main .input-stick {
+  position: absolute;
+  top: 50%;
+  left: 1.5rem;
+  width: 0.07rem;
+  height: 1.5rem;
+  transform: translateY(-50%);
+  background-color: #393939;
+}
+.main-container .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: linear-gradient(180deg, #b9cbd8 51.56%, rgba(196, 196, 196, 0) 75.52%);
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+}
+
+@-webkit-keyframes navLinks {
+  from {
+    opacity: 0;
+    transform: translateY(30%);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0%);
+  }
+}
+
+@keyframes navLinks {
+  from {
+    opacity: 0;
+    transform: translateY(30%);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0%);
+  }
 }
