--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -17,7 +17,7 @@
       .logo,
       .hamburger {
         transition: all 0.4s;
-        z-index: 3;
+        z-index: 4;
       }
 
       .logo.nav-active {
@@ -32,6 +32,7 @@
         background-color: $mobile-nav-bg;
         transform: translateY(-110%);
         transition: all 0.5s ease-in-out;
+        z-index: 3;
       }
 
       .nav.active {
@@ -50,19 +51,79 @@
       .nav-links {
         color: $mobile-nav-links;
         text-transform: uppercase;
+        opacity: 0;
+      }
+
+      .nav-links.active {
+        animation: navLinks 0.5s ease-in-out 0.5s forwards;
       }
     }
   }
 
   .main {
     @include container();
-    @include flex();
-    height: 50vh;
+    @include flex(center, center, column, 3rem);
+    height: 60vh;
 
     .hero-text {
       text-align: center;
       font-size: $mobile-header;
       font-weight: $font-700;
+      z-index: 2;
     }
+
+    .search-input-group {
+      position: relative;
+      width: 90%;
+      height: 3rem;
+      z-index: 2;
+    }
+
+    .search-input {
+      width: 100%;
+      height: 100%;
+      font-size: 1rem;
+      padding: 0.4rem 1rem 0.4rem 2.3rem;
+      background-color: rgba($color: $pry-color, $alpha: 0.2);
+      border-radius: 2rem;
+      border: none;
+
+      &::placeholder {
+        font-style: italic;
+        color: $lighter-dark-text;
+        font-weight: 500;
+        font-size: 0.9rem;
+      }
+    }
+
+    .input-stick {
+      @include position(absolute, 50%, 1.5rem);
+      width: 0.07rem;
+      height: 1.5rem;
+      transform: translateY(-50%);
+      background-color: $lighter-dark-text;
+    }
+  }
+
+  .overlay {
+    @include position(absolute);
+    @include overlay(
+      linear-gradient(180deg, #b9cbd8 51.56%, rgba(196, 196, 196, 0) 75.52%)
+    );
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+  }
+}
+
+// This is the animation for mobile nav links when nav is active
+@keyframes navLinks {
+  from {
+    opacity: 0;
+    transform: translateY(30%);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0%);
   }
 }
