--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -18,6 +18,74 @@ a {
   text-decoration: none;
 }
 
+.container {
+  width: 90%;
+  margin: auto;
+  max-width: 1440px;
+}
+
+.section-title {
+  font-size: 1.75rem;
+  font-size: 600;
+}
+
+.hostel-section {
+  margin: 7.8125rem 0;
+}
+.hostel-section .hostel-group {
+  margin: 4.6875rem 0 0;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 3.4375rem;
+}
+.hostel-section .hostel-group .hostel-card {
+  display: block;
+  width: 100%;
+  border: 0;
+  background-color: #fff;
+  box-shadow: 0px 6px 10px -4px rgba(0, 0, 0, 0.3);
+  border-radius: 1rem;
+  overflow: hidden;
+  text-align: left;
+}
+.hostel-section .hostel-group .hostel-card .hostel-image-group {
+  width: 100%;
+  height: 13rem;
+  background-color: grey;
+}
+.hostel-section .hostel-group .hostel-card .hostel-details-group {
+  padding: 1.5rem 1.125rem;
+}
+.hostel-section .hostel-group .hostel-card .hostel-name-occupants {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+  gap: 1rem;
+  margin-bottom: 3.125rem;
+}
+.hostel-section .hostel-group .hostel-card .hostel-name {
+  font-size: 1.5rem;
+  font-weight: 500;
+  line-height: 1.6;
+}
+.hostel-section .hostel-group .hostel-card .hostel-name .lga-state {
+  display: block;
+  font-weight: 400;
+  font-style: italic;
+  font-size: 1rem;
+  color: #888;
+}
+.hostel-section .hostel-group .hostel-card .occupants {
+  font-size: 1rem;
+  gap: 0.6rem;
+  color: #393939;
+}
+.hostel-section .hostel-group .hostel-card .price {
+  font-size: 1.25rem;
+  font-weight: 600;
+}
+
 .main-container {
   width: 100%;
   height: 100vh;
@@ -26,8 +94,17 @@ a {
   background-position: center;
   background-size: cover;
 }
+@media screen and (min-width: 600px) {
+  .main-container {
+    background-image: url("../assets/desktop-hero-bg.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+  }
+}
 .main-container .header {
   width: 100%;
+  margin-top: 2rem;
 }
 .main-container .header .logo-nav-wrapper {
   display: flex;
@@ -37,6 +114,7 @@ a {
   gap: 1rem;
   width: 90%;
   margin: auto;
+  max-width: 1440px;
   height: 10vh;
   overflow-x: hidden;
 }
@@ -64,6 +142,17 @@ a {
   transition: all 0.5s ease-in-out;
   z-index: 3;
 }
+@media screen and (min-width: 900px) {
+  .main-container .header .logo-nav-wrapper .nav {
+    position: relative;
+    top: 0;
+    left: 0;
+    transform: translateY(0%);
+    width: 85%;
+    min-height: 100%;
+    background-color: transparent;
+  }
+}
 .main-container .header .logo-nav-wrapper .nav.active {
   transform: translateX(0%);
 }
@@ -79,44 +168,94 @@ a {
   font-size: 1.5rem;
   font-weight: 600;
 }
+@media screen and (min-width: 600px) {
+  .main-container .header .logo-nav-wrapper .nav-links-wrapper {
+    font-size: 1.75rem;
+  }
+}
+@media screen and (min-width: 900px) {
+  .main-container .header .logo-nav-wrapper .nav-links-wrapper {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    flex-direction: row;
+    gap: 1.5rem;
+    position: relative;
+    width: 100%;
+    font-size: 1.18rem;
+    font-weight: 500;
+  }
+}
+@media screen and (min-width: 1100px) {
+  .main-container .header .logo-nav-wrapper .nav-links-wrapper {
+    gap: 3rem;
+    font-size: 1.25rem;
+  }
+}
 .main-container .header .logo-nav-wrapper .nav-links {
   color: #969696;
   text-transform: uppercase;
   opacity: 0;
 }
+@media screen and (min-width: 900px) {
+  .main-container .header .logo-nav-wrapper .nav-links {
+    opacity: 1;
+    text-transform: none;
+    color: #393939;
+  }
+}
 .main-container .header .logo-nav-wrapper .nav-links.active {
   -webkit-animation: navLinks 0.5s ease-in-out 0.5s forwards;
           animation: navLinks 0.5s ease-in-out 0.5s forwards;
 }
+@media screen and (min-width: 900px) {
+  .main-container .header .logo-nav-wrapper .hamburger {
+    display: none;
+  }
+}
 .main-container .main {
   width: 90%;
   margin: auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  gap: 3rem;
-  height: 60vh;
+  max-width: 1440px;
 }
 .main-container .main .hero-text {
+  position: relative;
   text-align: center;
   font-size: 2.35rem;
   font-weight: 700;
+  margin: 11rem 0 4rem;
   z-index: 2;
+}
+@media screen and (min-width: 900px) {
+  .main-container .main .hero-text {
+    font-size: 3.5rem;
+  }
+}
+@media screen and (min-width: 900px) {
+  .main-container .main .hero-text {
+    font-size: 4.5rem;
+  }
 }
 .main-container .main .search-input-group {
   position: relative;
+  margin: 0 auto;
   width: 90%;
   height: 3rem;
   z-index: 2;
+}
+@media screen and (min-width: 600px) {
+  .main-container .main .search-input-group {
+    height: 4rem;
+  }
 }
 .main-container .main .search-input {
   width: 100%;
   height: 100%;
   font-size: 1rem;
-  padding: 0.4rem 1rem 0.4rem 2.3rem;
-  background-color: rgba(51, 56, 164, 0.2);
+  padding: 0.4rem 1rem 0.4rem 2.5rem;
+  background-color: #b2bfd5;
   border-radius: 2rem;
+  letter-spacing: 1px;
   border: none;
 }
 .main-container .main .search-input::-moz-placeholder {
@@ -137,14 +276,35 @@ a {
   font-weight: 500;
   font-size: 0.9rem;
 }
+@media screen and (min-width: 600px) {
+  .main-container .main .search-input {
+    padding: 0.4rem 2rem 0.4rem 4.5rem;
+    font-size: 1.2rem;
+  }
+  .main-container .main .search-input::-moz-placeholder {
+    font-size: 1.2rem;
+  }
+  .main-container .main .search-input:-ms-input-placeholder {
+    font-size: 1.2rem;
+  }
+  .main-container .main .search-input::placeholder {
+    font-size: 1.2rem;
+  }
+}
 .main-container .main .input-stick {
   position: absolute;
   top: 50%;
   left: 1.5rem;
-  width: 0.07rem;
-  height: 1.5rem;
+  width: 0.05rem;
+  height: 1.1rem;
   transform: translateY(-50%);
   background-color: #393939;
+}
+@media screen and (min-width: 600px) {
+  .main-container .main .input-stick {
+    left: 2.8rem;
+    height: 1.5rem;
+  }
 }
 .main-container .overlay {
   position: absolute;
