--- a/src/sass/partials/_utilities.scss
+++ b/src/sass/partials/_utilities.scss
@@ -1,3 +1,5 @@
+@use "../partials/_mixins.scss" as *;
+
 *,
 *::before,
 *::after {
@@ -15,4 +17,76 @@ body {
 
 a {
   text-decoration: none;
+}
+
+.container {
+  @include container();
+}
+
+.section-title {
+  font-size: $mobile-sub-header;
+  font-size: $font-600;
+}
+
+// Hostel Cards Section
+.hostel-section {
+  margin: 7.8125rem 0;
+
+  .hostel-group {
+    margin: 4.6875rem 0 0;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 3.4375rem;
+
+    .hostel-card {
+      display: block;
+      width: 100%;
+      border: 0;
+      background-color: $white;
+      box-shadow: 0px 6px 10px -4px rgba(0, 0, 0, 0.3);
+      border-radius: 1rem;
+      overflow: hidden;
+      text-align: left;
+
+      .hostel-image-group {
+        width: 100%;
+        height: 13rem;
+        background-color: grey;
+      }
+
+      .hostel-details-group {
+        padding: 1.5rem 1.125rem;
+      }
+
+      .hostel-name-occupants {
+        @include flex(space-between);
+        margin-bottom: 3.125rem;
+      }
+
+      .hostel-name {
+        font-size: $mobile-large-text;
+        font-weight: $font-500;
+        line-height: 1.6;
+
+        .lga-state {
+          display: block;
+          font-weight: 400;
+          font-style: italic;
+          font-size: $base-text;
+          color: $lightest-dark-text;
+        }
+      }
+
+      .occupants {
+        font-size: 1rem;
+        gap: 0.6rem;
+        color: $lighter-dark-text;
+      }
+
+      .price {
+        font-size: $mobile-medium-text;
+        font-weight: $font-600;
+      }
+    }
+  }
 }
