--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -8,24 +8,184 @@
   box-sizing: border-box;
 }
 
+*:focus {
+  padding: 0.1rem;
+  outline: 2px dashed #3e4079;
+}
+
 body {
   overflow-x: hidden;
   min-height: 100vh;
   color: #111;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  gap: 1rem;
+}
+
+#root {
+  width: 100%;
 }
 
 a {
   text-decoration: none;
 }
 
+button,
+label {
+  cursor: pointer;
+}
+
 .container {
   width: 90%;
-  margin: auto;
+  margin: 0 auto;
   max-width: 1440px;
+  padding-bottom: 4rem;
+}
+
+.header {
+  width: 100%;
+  margin-top: 1rem;
+}
+.header .logo-nav-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+  gap: 1rem;
+  width: 90%;
+  margin: 0 auto;
+  max-width: 1440px;
+  height: 10vh;
+  overflow-x: hidden;
+  z-index: 4;
+}
+.header .logo-nav-wrapper .logo,
+.header .logo-nav-wrapper .hamburger {
+  transition: all 0.4s;
+  z-index: 4;
+}
+.header .logo-nav-wrapper .logo {
+  font-size: 1.3rem;
+  font-weight: 500;
+}
+@media screen and (min-width: 1100px) {
+  .header .logo-nav-wrapper .logo {
+    font-size: 1.25rem;
+  }
+}
+.header .logo-nav-wrapper .logo.nav-active {
+  color: #ccc;
+}
+.header .logo-nav-wrapper .nav {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-direction: row;
+  gap: 1rem;
+  width: 100%;
+  min-height: 100vh;
+  background-color: #141525;
+  transform: translateY(-110%);
+  transition: all 0.5s ease-in-out;
+  z-index: 3;
+}
+@media screen and (min-width: 900px) {
+  .header .logo-nav-wrapper .nav {
+    position: relative;
+    top: 0;
+    left: 0;
+    transform: translateY(0%);
+    width: 85%;
+    min-height: 100%;
+    background-color: transparent;
+  }
+}
+.header .logo-nav-wrapper .nav.active {
+  transform: translateX(0%);
+}
+.header .logo-nav-wrapper .nav-links-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-direction: column;
+  gap: 4.6875rem;
+  width: 90%;
+  margin: auto;
+  height: 100%;
+  font-size: 1.3rem;
+  font-weight: 600;
+}
+@media screen and (min-width: 600px) {
+  .header .logo-nav-wrapper .nav-links-wrapper {
+    font-size: 1.75rem;
+  }
+}
+@media screen and (min-width: 900px) {
+  .header .logo-nav-wrapper .nav-links-wrapper {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    flex-direction: row;
+    gap: 1.5rem;
+    position: relative;
+    width: 100%;
+    font-size: 1.18rem;
+    font-weight: 500;
+  }
+}
+@media screen and (min-width: 1100px) {
+  .header .logo-nav-wrapper .nav-links-wrapper {
+    gap: 3rem;
+    font-size: 1.25rem;
+  }
+}
+.header .logo-nav-wrapper .nav-links {
+  position: relative;
+  color: #969696;
+  text-transform: uppercase;
+  opacity: 0;
+  transition: all 0.3s ease-in-out;
+}
+.header .logo-nav-wrapper .nav-links::before {
+  content: "";
+  position: absolute;
+  bottom: -0.3rem;
+  width: 100%;
+  height: 0.1rem;
+  background-color: #3e4079;
+  transition: all 0.3s ease-in-out;
+  opacity: 0;
+}
+@media screen and (min-width: 900px) {
+  .header .logo-nav-wrapper .nav-links {
+    opacity: 1;
+    text-transform: none;
+    color: #393939;
+  }
+  .header .logo-nav-wrapper .nav-links:hover {
+    color: #3338a4;
+  }
+  .header .logo-nav-wrapper .nav-links:hover::before {
+    opacity: 1;
+  }
+}
+.header .logo-nav-wrapper .nav-links.active {
+  -webkit-animation: navLinks 0.5s ease-in-out 0.5s forwards;
+          animation: navLinks 0.5s ease-in-out 0.5s forwards;
+}
+@media screen and (min-width: 900px) {
+  .header .logo-nav-wrapper .hamburger {
+    display: none;
+  }
 }
 
 .section-title {
-  font-size: 1.75rem;
+  font-size: 1.5rem;
   font-size: 600;
 }
 
@@ -35,7 +195,7 @@ a {
 .hostel-section .hostel-group {
   margin: 4.6875rem 0 0;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 3.4375rem;
 }
 .hostel-section .hostel-group .hostel-card {
@@ -54,18 +214,18 @@ a {
   background-color: grey;
 }
 .hostel-section .hostel-group .hostel-card .hostel-details-group {
-  padding: 1.5rem 1.125rem;
+  padding: 1.5rem 1rem;
 }
 .hostel-section .hostel-group .hostel-card .hostel-name-occupants {
   display: flex;
   justify-content: space-between;
   align-items: center;
   flex-direction: row;
-  gap: 1rem;
+  gap: 1.1rem;
   margin-bottom: 3.125rem;
 }
 .hostel-section .hostel-group .hostel-card .hostel-name {
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   font-weight: 500;
   line-height: 1.6;
 }
@@ -79,16 +239,164 @@ a {
 .hostel-section .hostel-group .hostel-card .occupants {
   font-size: 1rem;
   gap: 0.6rem;
-  color: #393939;
+  color: #111;
 }
 .hostel-section .hostel-group .hostel-card .price {
-  font-size: 1.25rem;
+  font-size: 1.3rem;
   font-weight: 600;
+}
+
+.footer {
+  margin-top: auto;
+  width: 100%;
+  background-color: #3338a4;
+  text-align: center;
+  padding: 0.9rem;
+  color: #fff;
+}
+.footer .copyright {
+  font-size: 1.05rem;
+}
+
+.form-wrapper {
+  font-weight: 500;
+  font-size: 1.05rem;
+  margin: auto;
+  max-width: 49rem;
+}
+@media screen and (min-width: 600px) {
+  .form-wrapper {
+    width: 80%;
+  }
+}
+@media screen and (min-width: 900px) {
+  .form-wrapper {
+    width: 100%;
+    font-size: 1.35rem;
+  }
+}
+.form-wrapper .form {
+  margin-top: 6.25rem;
+}
+.form-wrapper .form-btn {
+  width: 100%;
+  font-weight: 500;
+  font-size: 1.17rem;
+  border: none;
+  border-radius: 1rem;
+  padding: 1rem;
+  background-color: #3e4079;
+  color: #fff;
+  margin: 2.1875rem 0 2.8125rem;
+}
+.form-wrapper .form-btn:hover, .form-wrapper .form-btn:focus {
+  background-color: #4f529b;
+}
+@media screen and (min-width: 900px) {
+  .form-wrapper .form-btn {
+    font-size: 1.75rem;
+    margin: 3.75rem 0 3rem;
+    padding: 1.5rem;
+  }
+}
+.form-wrapper .form-title {
+  text-align: center;
+  font-weight: 600;
+  font-size: 2rem;
+  margin-bottom: 4.3rem;
+  color: #3e4079;
+}
+@media screen and (min-width: 900px) {
+  .form-wrapper .form-title {
+    font-size: 3.5rem;
+    margin-bottom: 5.9rem;
+  }
+}
+.form-wrapper .input-group:not(:last-of-type) {
+  margin-bottom: 2.8rem;
+}
+@media screen and (min-width: 900px) {
+  .form-wrapper .input-group:not(:last-of-type) {
+    margin-bottom: 3.5rem;
+  }
+}
+.form-wrapper .input-group .label {
+  display: inline-block;
+  font-size: 1.3rem;
+  color: #3e4079;
+  margin-bottom: 1.125rem;
+}
+@media screen and (min-width: 900px) {
+  .form-wrapper .input-group .label {
+    font-size: 1.75rem;
+  }
+}
+.form-wrapper .input-group .input {
+  display: block;
+  width: 100%;
+  height: 3rem;
+  padding: 1rem;
+  font-size: 1.17rem;
+  letter-spacing: 1px;
+  border-radius: 1rem;
+  background-color: #c5d1e6;
+  border: none;
+  transition: all 0.3s ease-in-out;
+}
+.form-wrapper .input-group .input:hover, .form-wrapper .input-group .input:focus {
+  background-color: #e2e8f2;
+}
+@media screen and (min-width: 900px) {
+  .form-wrapper .input-group .input {
+    height: 4.3rem;
+    font-size: 1.35rem;
+  }
+}
+.form-wrapper .input-section {
+  margin-bottom: 2.8rem;
+}
+@media screen and (min-width: 900px) {
+  .form-wrapper .input-section {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+    gap: 2rem;
+    margin-bottom: 3.5rem;
+  }
+  .form-wrapper .input-section .input-group {
+    width: 100%;
+    margin-bottom: 0;
+  }
+}
+.form-wrapper .account-prompt {
+  text-align: center;
+}
+.form-wrapper .account-prompt-link {
+  display: inline-block;
+  position: relative;
+  color: #3e4079;
+  transition: all 0.3s ease-in-out;
+}
+.form-wrapper .account-prompt-link:hover {
+  color: #8c8ec4;
+}
+.form-wrapper .account-prompt-link:hover::before {
+  background-color: #8c8ec4;
+}
+.form-wrapper .account-prompt-link::before {
+  content: "";
+  position: absolute;
+  bottom: -0.3rem;
+  width: 100%;
+  height: 0.11rem;
+  background-color: #3e4079;
+  transition: all 0.3s ease-in-out;
 }
 
 .main-container {
   width: 100%;
-  height: 100vh;
+  min-height: calc(90vh - 1rem);
   background-image: url("../assets/mobile-hero-bg.jpg");
   background-repeat: no-repeat;
   background-position: center;
@@ -102,128 +410,19 @@ a {
     background-size: cover;
   }
 }
-.main-container .header {
-  width: 100%;
-  margin-top: 2rem;
-}
-.main-container .header .logo-nav-wrapper {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-direction: row;
-  gap: 1rem;
-  width: 90%;
-  margin: auto;
-  max-width: 1440px;
-  height: 10vh;
-  overflow-x: hidden;
-}
-.main-container .header .logo-nav-wrapper .logo,
-.main-container .header .logo-nav-wrapper .hamburger {
-  transition: all 0.4s;
-  z-index: 4;
-}
-.main-container .header .logo-nav-wrapper .logo.nav-active {
-  color: #ccc;
-}
-.main-container .header .logo-nav-wrapper .nav {
-  position: absolute;
-  top: 0;
-  left: 0;
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  flex-direction: row;
-  gap: 1rem;
-  width: 100%;
-  min-height: 100vh;
-  background-color: #141525;
-  transform: translateY(-110%);
-  transition: all 0.5s ease-in-out;
-  z-index: 3;
-}
-@media screen and (min-width: 900px) {
-  .main-container .header .logo-nav-wrapper .nav {
-    position: relative;
-    top: 0;
-    left: 0;
-    transform: translateY(0%);
-    width: 85%;
-    min-height: 100%;
-    background-color: transparent;
-  }
-}
-.main-container .header .logo-nav-wrapper .nav.active {
-  transform: translateX(0%);
-}
-.main-container .header .logo-nav-wrapper .nav-links-wrapper {
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  flex-direction: column;
-  gap: 4.6875rem;
-  width: 90%;
-  margin: auto;
-  height: 100%;
-  font-size: 1.5rem;
-  font-weight: 600;
-}
-@media screen and (min-width: 600px) {
-  .main-container .header .logo-nav-wrapper .nav-links-wrapper {
-    font-size: 1.75rem;
-  }
-}
-@media screen and (min-width: 900px) {
-  .main-container .header .logo-nav-wrapper .nav-links-wrapper {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    flex-direction: row;
-    gap: 1.5rem;
-    position: relative;
-    width: 100%;
-    font-size: 1.18rem;
-    font-weight: 500;
-  }
-}
-@media screen and (min-width: 1100px) {
-  .main-container .header .logo-nav-wrapper .nav-links-wrapper {
-    gap: 3rem;
-    font-size: 1.25rem;
-  }
-}
-.main-container .header .logo-nav-wrapper .nav-links {
-  color: #969696;
-  text-transform: uppercase;
-  opacity: 0;
-}
-@media screen and (min-width: 900px) {
-  .main-container .header .logo-nav-wrapper .nav-links {
-    opacity: 1;
-    text-transform: none;
-    color: #393939;
-  }
-}
-.main-container .header .logo-nav-wrapper .nav-links.active {
-  -webkit-animation: navLinks 0.5s ease-in-out 0.5s forwards;
-          animation: navLinks 0.5s ease-in-out 0.5s forwards;
-}
-@media screen and (min-width: 900px) {
-  .main-container .header .logo-nav-wrapper .hamburger {
-    display: none;
-  }
-}
 .main-container .main {
+  height: 100%;
+  padding-top: 11rem;
   width: 90%;
-  margin: auto;
+  margin: 0 auto;
   max-width: 1440px;
 }
 .main-container .main .hero-text {
   position: relative;
   text-align: center;
-  font-size: 2.35rem;
+  font-size: 2rem;
   font-weight: 700;
-  margin: 11rem 0 4rem;
+  padding-bottom: 4rem;
   z-index: 2;
 }
 @media screen and (min-width: 900px) {
@@ -253,7 +452,7 @@ a {
   height: 100%;
   font-size: 1rem;
   padding: 0.4rem 1rem 0.4rem 2.5rem;
-  background-color: #b2bfd5;
+  background-color: #c5d1e6;
   border-radius: 2rem;
   letter-spacing: 1px;
   border: none;
