--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -2,109 +2,16 @@
 
 .main-container {
   width: 100%;
-  height: 100vh;
+  min-height: calc(100vh - 10vh - 1rem);
   @include background-image("../assets/mobile-hero-bg.jpg");
 
   @include media-query(tablet) {
     @include background-image("../assets/desktop-hero-bg.jpg");
   }
 
-  .header {
-    width: 100%;
-    margin-top: 2rem;
-
-    .logo-nav-wrapper {
-      @include flex(space-between);
-      @include container();
-      height: 10vh;
-      overflow-x: hidden;
-
-      .logo,
-      .hamburger {
-        transition: all 0.4s;
-        z-index: 4;
-      }
-
-      .logo.nav-active {
-        color: $light-text;
-      }
-
-      .nav {
-        @include position(absolute);
-        @include flex(center, flex-start);
-        width: 100%;
-        min-height: 100vh;
-        background-color: $mobile-nav-bg;
-        transform: translateY(-110%);
-        transition: all 0.5s ease-in-out;
-        z-index: 3;
-
-        @include media-query(bigTablet) {
-          position: relative;
-          top: 0;
-          left: 0;
-          transform: translateY(0%);
-          width: 85%;
-          min-height: 100%;
-          background-color: transparent;
-        }
-      }
-
-      .nav.active {
-        transform: translateX(0%);
-      }
-
-      .nav-links-wrapper {
-        @include flex(center, flex-start, column, 4.6875rem);
-        width: 90%;
-        margin: auto;
-        height: 100%;
-        font-size: $mobile-large-text;
-        font-weight: $font-600;
-
-        @include media-query(tablet) {
-          font-size: $tablet-large-text;
-        }
-
-        @include media-query(bigTablet) {
-          @include flex(flex-end, center, row, 1.5rem);
-          position: relative;
-          width: 100%;
-          font-size: $tablet-text;
-          font-weight: $font-500;
-        }
-
-        @include media-query(desktop) {
-          gap: 3rem;
-          font-size: $desktop-text;
-        }
-      }
-
-      .nav-links {
-        color: $mobile-nav-links;
-        text-transform: uppercase;
-        opacity: 0;
-
-        @include media-query(bigTablet) {
-          opacity: 1;
-          text-transform: none;
-          color: $lighter-dark-text;
-        }
-      }
-
-      .nav-links.active {
-        animation: navLinks 0.5s ease-in-out 0.5s forwards;
-      }
-
-      .hamburger {
-        @include media-query(bigTablet) {
-          display: none;
-        }
-      }
-    }
-  }
-
   .main {
+    height: 100%;
+    padding-top: 11rem;
     @include container();
 
     .hero-text {
@@ -112,7 +19,7 @@
       text-align: center;
       font-size: $mobile-header;
       font-weight: $font-700;
-      margin: 11rem 0 4rem;
+      padding-bottom: 4rem;
       z-index: 2;
 
       @include media-query(bigTablet) {
@@ -141,7 +48,7 @@
       height: 100%;
       font-size: 1rem;
       padding: 0.4rem 1rem 0.4rem 2.5rem;
-      background-color: #b2bfd5;
+      background-color: $input-bg;
       border-radius: 2rem;
       letter-spacing: 1px;
       border: none;
