--- a/src/sass/partials/_variables.scss
+++ b/src/sass/partials/_variables.scss
@@ -5,10 +5,12 @@ $desktop-breakpoint: 1100px;
 
 // COLORS
 $pry-color: #3338a4;
+$sec-color: #3e4079;
 
 // backgrounds
 $bg-color: #f6f6f6;
 $mobile-nav-bg: #141525;
+$input-bg: #c5d1e6;
 $white: #fff;
 
 // text-colors
@@ -21,11 +23,12 @@ $mobile-nav-links: #969696;
 // FONT
 // sizes
 $base-text: 1rem;
-$mobile-text: 1.125rem;
-$mobile-medium-text: 1.25rem;
-$mobile-large-text: 1.5rem;
-$mobile-sub-header: 1.75rem;
-$mobile-header: 2.35rem;
+
+$mobile-text: 1.05rem;
+$mobile-medium-text: 1.17rem;
+$mobile-large-text: 1.3rem;
+$mobile-sub-header: 1.5rem;
+$mobile-header: 2rem;
 
 $tablet-text: 1.18rem;
 $tablet-medium-text: 1.35rem;
