--- a/src/sass/partials/_utilities.scss
+++ b/src/sass/partials/_utilities.scss
@@ -18,11 +18,6 @@ body {
   overflow-x: hidden;
   min-height: 100vh;
   color: $dark-text;
-  @include flex();
-}
-
-#root {
-  width: 100%;
 }
 
 a {
@@ -36,6 +31,7 @@ label {
 
 .container {
   @include container();
+  min-height: calc(90vh - 1rem);
   padding-bottom: 4rem;
 }
 
@@ -97,7 +93,7 @@ label {
     .nav-links-wrapper {
       @include flex(center, flex-start, column, 4.6875rem);
       width: 90%;
-      margin: auto;
+      margin: 9rem auto 0;
       height: 100%;
       font-size: $mobile-large-text;
       font-weight: $font-600;
@@ -112,6 +108,7 @@ label {
         width: 100%;
         font-size: $tablet-text;
         font-weight: $font-500;
+        margin: auto;
       }
 
       @include media-query(desktop) {
@@ -158,8 +155,21 @@ label {
     }
 
     .hamburger {
+      background: none;
+      border: none;
+
       @include media-query(bigTablet) {
         display: none;
+      }
+    }
+
+    .profile-icon {
+      path {
+        fill: $mobile-nav-links;
+
+        @include media-query(bigTablet) {
+          fill: $lighter-dark-text;
+        }
       }
     }
   }
@@ -265,6 +275,7 @@ label {
     margin-top: 6.25rem;
 
     &-btn {
+      display: inline-block;
       width: 100%;
       font-weight: $font-500;
       font-size: $mobile-medium-text;
@@ -274,6 +285,7 @@ label {
       background-color: $sec-color;
       color: $white;
       margin: 2.1875rem 0 2.8125rem;
+      text-align: center;
 
       &:hover,
       &:focus {
@@ -387,4 +399,9 @@ label {
       }
     }
   }
+}
+
+.profile {
+  @include flex();
+  text-align: center;
 }
