--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -200,8 +200,8 @@ label {
 .hostel-section .hostel-group {
   margin: 4.6875rem 0 0;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: 3.4375rem;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 3rem;
 }
 .hostel-section .hostel-group .hostel-card {
   display: block;
@@ -405,9 +405,28 @@ label {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: row;
+  flex-direction: column;
   gap: 1rem;
   text-align: center;
+}
+
+.account-notification {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 2rem;
+  background-color: #fff;
+  z-index: 5;
+}
+.account-notification-text {
+  font-size: 1.7rem;
+  font-weight: 500;
 }
 
 .main-container {
