--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -32,6 +32,10 @@ p {
   line-height: 1.5;
 }
 
+img {
+  width: 100%;
+}
+
 input[type=radio] {
   -webkit-appearance: none;
      -moz-appearance: none;
@@ -154,7 +158,7 @@ input[type=radio]:checked::before {
 }
 @media screen and (min-width: 600px) {
   .header .logo-nav-wrapper .nav-links-wrapper {
-    font-size: 1.55rem;
+    font-size: 1.5rem;
   }
 }
 @media screen and (min-width: 900px) {
@@ -332,7 +336,7 @@ input[type=radio]:checked::before {
 @media screen and (min-width: 900px) {
   .form-wrapper {
     width: 100%;
-    font-size: 1.3rem;
+    font-size: 1.35rem;
   }
 }
 .form-wrapper .form-title {
@@ -376,7 +380,7 @@ input[type=radio]:checked::before {
 .form-wrapper .button-group .switch-btn {
   width: 40%;
   padding: 0.8rem 0.5rem;
-  font-size: 1.135rem;
+  font-size: 1.15rem;
   font-weight: 500;
   color: #c1c2dd;
   background: none;
@@ -386,7 +390,7 @@ input[type=radio]:checked::before {
 }
 @media screen and (min-width: 900px) {
   .form-wrapper .button-group .switch-btn {
-    font-size: 1.3rem;
+    font-size: 1.35rem;
   }
 }
 .form-wrapper .button-group .switch-btn.active {
@@ -398,7 +402,7 @@ input[type=radio]:checked::before {
   display: inline-block;
   width: 100%;
   font-weight: 500;
-  font-size: 1.135rem;
+  font-size: 1.15rem;
   border: none;
   border-radius: 1rem;
   padding: 1rem;
@@ -412,10 +416,72 @@ input[type=radio]:checked::before {
 }
 @media screen and (min-width: 900px) {
   .form-wrapper .form-btn {
-    font-size: 1.55rem;
+    font-size: 1.5rem;
     margin: 3.75rem 0 3rem;
     padding: 1.5rem;
   }
+}
+.form-wrapper .form .selected-images {
+  display: grid;
+  width: 100%;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 1rem;
+  margin-bottom: 3rem;
+}
+.form-wrapper .form .selected-images .selected-image {
+  width: 100%;
+  height: 300px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.form-wrapper .form .post-btn {
+  position: relative;
+  display: static;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  padding: 1.375rem 3.9375rem;
+  left: 50%;
+  transform: translateX(-50%);
+  text-align: center;
+}
+.form-wrapper .form .hostel-details-textarea {
+  display: block;
+  width: 100%;
+  height: 17.75rem;
+  padding: 1.5rem 1rem;
+  font-size: 1.05rem;
+  letter-spacing: 1px;
+  border-radius: 1rem;
+  background-color: #c5d1e6;
+  border: transparent;
+  transition: all 0.3s ease-in-out;
+}
+.form-wrapper .form .hostel-details-textarea::-moz-placeholder {
+  font-style: italic;
+}
+.form-wrapper .form .hostel-details-textarea:-ms-input-placeholder {
+  font-style: italic;
+}
+.form-wrapper .form .hostel-details-textarea::placeholder {
+  font-style: italic;
+}
+@media screen and (min-width: 900px) {
+  .form-wrapper .form .hostel-details-textarea {
+    font-size: 1.35rem;
+  }
+  .form-wrapper .form .hostel-details-textarea::-moz-placeholder {
+    font-size: 1.15rem;
+  }
+  .form-wrapper .form .hostel-details-textarea:-ms-input-placeholder {
+    font-size: 1.15rem;
+  }
+  .form-wrapper .form .hostel-details-textarea::placeholder {
+    font-size: 1.15rem;
+  }
+}
+.form-wrapper .post-form {
+  margin-top: 5rem;
 }
 .form-wrapper .input-group:not(:last-of-type) {
   margin-bottom: 2rem;
@@ -427,13 +493,13 @@ input[type=radio]:checked::before {
 }
 .form-wrapper .input-group .label {
   display: inline-block;
-  font-size: 1.25rem;
+  font-size: 1.15rem;
   color: #3e4079;
   margin-bottom: 1.125rem;
 }
 @media screen and (min-width: 900px) {
   .form-wrapper .input-group .label {
-    font-size: 1.55rem;
+    font-size: 1.5rem;
   }
 }
 .form-wrapper .input-group .input {
@@ -441,12 +507,21 @@ input[type=radio]:checked::before {
   width: 100%;
   height: 3rem;
   padding: 1rem;
-  font-size: 1.135rem;
+  font-size: 1.05rem;
   letter-spacing: 1px;
   border-radius: 1rem;
   background-color: #c5d1e6;
-  border: none;
+  border: transparent;
   transition: all 0.3s ease-in-out;
+}
+.form-wrapper .input-group .input::-moz-placeholder {
+  font-style: italic;
+}
+.form-wrapper .input-group .input:-ms-input-placeholder {
+  font-style: italic;
+}
+.form-wrapper .input-group .input::placeholder {
+  font-style: italic;
 }
 .form-wrapper .input-group .input:hover, .form-wrapper .input-group .input:focus {
   background-color: #e2e8f2;
@@ -454,19 +529,45 @@ input[type=radio]:checked::before {
 @media screen and (min-width: 900px) {
   .form-wrapper .input-group .input {
     height: 3.35rem;
-    font-size: 1.3rem;
+    font-size: 1.35rem;
   }
+  .form-wrapper .input-group .input::-moz-placeholder {
+    font-size: 1.15rem;
+  }
+  .form-wrapper .input-group .input:-ms-input-placeholder {
+    font-size: 1.15rem;
+  }
+  .form-wrapper .input-group .input::placeholder {
+    font-size: 1.15rem;
+  }
+}
+.form-wrapper .input-group .input[type=file] {
+  width: 100%;
+  background: none;
+  padding: 0.5rem 0;
+  height: 4.7rem;
+  font-size: 1.05rem;
+  letter-spacing: 0;
+}
+.form-wrapper .input-group .input[type=file]::-webkit-file-upload-button {
+  background: #3c3c3c;
+  color: #fff;
+  padding: 1rem 2rem;
+  font-weight: 500;
+  border: none;
+  border-radius: 1rem;
+  margin-right: 1rem;
 }
 .form-wrapper .input-group .select-input {
   width: 100%;
   border: 1px solid #3e4079;
   padding: 1rem 1.5rem;
-  font-size: 1.135rem;
+  font-size: 1.15rem;
   border-radius: 0.5rem;
 }
 @media screen and (min-width: 900px) {
   .form-wrapper .input-group .select-input {
-    font-size: 1.3rem;
+    font-size: 1.35rem;
   }
 }
 .form-wrapper .input-section {
@@ -510,12 +611,12 @@ input[type=radio]:checked::before {
   gap: 0;
 }
 .form-wrapper .radio-group-wrapper .radio-group label {
-  font-size: 1.135rem;
+  font-size: 1.15rem;
   padding-left: 0.5rem;
 }
 @media screen and (min-width: 900px) {
   .form-wrapper .radio-group-wrapper .radio-group label {
-    font-size: 1.3rem;
+    font-size: 1.35rem;
     padding-left: 0.65rem;
   }
 }
@@ -763,12 +864,12 @@ input[type=radio]:checked::before {
   }
 }
 .faq-section .faq-main .faq-box .faq-question h4 {
-  font-size: 1.135rem;
+  font-size: 1.15rem;
   font-weight: 500;
 }
 @media screen and (min-width: 900px) {
   .faq-section .faq-main .faq-box .faq-question h4 {
-    font-size: 1.3rem;
+    font-size: 1.35rem;
   }
 }
 .faq-section .faq-main .faq-box .faq-ans {
