--- a/src/sass/partials/_variables.scss
+++ b/src/sass/partials/_variables.scss
@@ -11,6 +11,7 @@ $sec-color: #3e4079;
 $mobile-nav-bg: #141525;
 $input-bg: #c5d1e6;
 $faq-bg-color: lighten($pry-color, 52);
+$file-input-bg: #3c3c3c;
 $white: #fff;
 
 // text-colors
@@ -25,14 +26,14 @@ $mobile-nav-links: #969696;
 $base-text: 1rem;
 
 $mobile-text: 1.05rem;
-$mobile-medium-text: 1.135rem;
+$mobile-medium-text: 1.15rem;
 $mobile-large-text: 1.25rem;
 $mobile-sub-header: 1.5rem;
 $mobile-header: 2rem;
 
 $tablet-text: 1.14rem;
-$tablet-medium-text: 1.3rem;
-$tablet-large-text: 1.55rem;
+$tablet-medium-text: 1.35rem;
+$tablet-large-text: 1.5rem;
 $tablet-sub-header: 2rem;
 $tablet-header: 3rem;
 
